# adm-sim

./: CMakeLists.txt  README.md  config.json
include/: Colormap.hpp  Manager.hpp  Renderer.hpp  Simulation.hpp  config.hpp
old/: CMakeLists.txt.old  config.json
old/data/: monitors.json  t.py  wind.json  write_data.py
old/src/admsim/: main.cpp
old/src/admsim/distribution/: test.cpp
old/src/admsim/simulation/: simulation.hpp
old/src/common/: config.hpp
old/src/makeanimation/: make_animation.py
old/src/makedata/: CMakeLists.txt
src/: Manager.cpp  Renderer.cpp  Simulation.cpp  main.cpp
src/admsim/: CMakeLists.txt  config.hpp  main.cpp  simulation.cpp  simulation.hpp  types.hpp
src/admsim/distribution/: distribution.cpp  distribution.hpp
src/admsim/simulation/: simulation.cpp  simulation.hpp  simulation_test.cpp
src/common/: config.cpp  config.hpp  io.hpp  math.hpp  types.hpp
src/makeanimation/: make_animation.py
src/makedata/: CMakeLists.txt  main.cpp
